<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fragment_kasir"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/nolist"
            android:id="@+id/textView7"
            android:layout_weight="0.24"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/item"
            android:id="@+id/textView8"
            android:layout_weight="0.37"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hargalist"
            android:id="@+id/textView9"
            android:layout_weight="0.35"
            android:gravity="center" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/listView"
        android:layout_weight="0.99" />

</LinearLayout>