<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/daftar_makanan"
        android:id="@+id/textView5"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="30sp" />

    <GridView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/gvMakanan"
        android:numColumns="2"
        android:clickable="false"
        android:padding="5dp"
        android:layout_weight="1.00">

    </GridView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/linearLayout2" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:id="@+id/btnResetMakanan"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/totalmakanan"
            android:id="@+id/textView"
            android:gravity="center_vertical|center|center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/_0"
            android:id="@+id/tvTotal"
            android:gravity="center_vertical|center|center_horizontal" />
    </LinearLayout>

</LinearLayout>