<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:padding="0dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ini_nomor"
        android:id="@+id/tvNomor"
        android:gravity="center"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ini_item"
        android:id="@+id/tvItem"
        android:layout_weight="0.49"
        android:gravity="center"
        android:textIsSelectable="false"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/ini_harga_list"
        android:id="@+id/tvJumlah"
        android:layout_weight="0.39"
        android:gravity="center"
        android:textSize="25sp" />
</LinearLayout>